--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^4.11.0",
     "recharts": "^2.10.3",
     "sass": "^1.69.5",
+    "socket.io-client": "^4.7.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
